chore: added some relation, some are to be added later
