# server/src/entities/blocked-user.ts
@@ -2,8 +2,9 @@
 import { Expose } from "class-transformer";
 import { IsUUID } from "class-validator-custom-errors";
 import { UUID } from "crypto";
-import { Column, Entity } from "typeorm";
+import { Column, Entity, ForeignKey } from "typeorm";
 import { PrimaryColumns } from "../lib/primary-columns";
+import User from "./user";
 
 @Entity({ name: 'blocked_users' })
 /** BlockedUser represents a user that has been blocked by the another user. */
@@ -12,8 +13,15 @@ export default class BlockedUser extends PrimaryColumns {
   @Expose()
   @IsUUID()
   @Column({ type: 'uuid' })
+  @ForeignKey(() => User)
   /** The user who has been blocked */
   user_id!: UUID;
+
+  @Expose()
+  @IsUUID()
+  @Column({ type: 'uuid' })
+  @ForeignKey(() => User)
+  override created_by!: `${string}-${string}-${string}-${string}-${string}`;
 
   get blocked_at() {
     return this.created_at;
